--- a/index.html
+++ b/index.html
@@ -21,3 +21,13 @@
 				</ul>
 			</div>
 		</div>
+	  <div id="pageContent">
+		  <h1>Geol 107 Geologic Catastrophes taught by professor Gwyneth Jones</h1>
+		  
+		  <h2>What I knew before I took this class</h2>
+		  <p>Before I took this course I knew a little bit about the difference between P waves and S waves which are different types of seismic waves and how earthquakes were triggered. I learned most of this in my sophomore chemestry class.</p>
+		  <h2>What I learned in this class</h2>
+		  <p>I learned a lot about some concepts that I was already familiar with and some concepts that I had never heard of. Some of the topics discussed in the class were emergency preparedness, earth cycles, earthquakes, tsunamis, landslides, floods, and global climate change. For most topics I learned about the processes that cause disasters, methods of minimizing the risk, and the effects and hazards of the disasters.</p>
+	  </div>
+	</body>
+</html>
